--- a/content/top/portfolio.Rmd
+++ b/content/top/portfolio.Rmd
@@ -27,12 +27,12 @@ h1, h2, h3, p {
   background-color: white;
   border: 2px solid black;
   color: black;
-  padding: 5px 15px;
+  padding: 5px 10px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
+  font-size: 12px;
+  margin: 2px 2px;
   cursor: pointer;
   transition-duration: 0.4s;
 }
@@ -49,9 +49,6 @@ h1, h2, h3, p {
 
 ```
 
-<!--- First Row -->
-
-::: {.row}
 <!--- Hollywood movie app -->
 
 ::: {.col-sm-6}
@@ -60,18 +57,34 @@ h1, h2, h3, p {
 
 🎫R 🎫Web App 🎫ML 🎫Data Viz
 
+<a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a> <a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">Git Code</a>
+
 A Shiny app built as an R package using `golem` framework. The primary goal of this application is to help users:
 
 1)  Interactively explore the data, and
 2)  Use an algorithm: K-Nearest Neighbors (KNN) to cluster the observations for a deeper understanding of both the data and model.
-
-<a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a> <a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">Git Code</a>
 
 ![](/img/shiny_hollywood_movie.jpg "Shiny App: Hollywood Movies"){width="492"}
 :::
 :::
 
 <!--- end hollywood app -->
+
+<!-- Python: enrollment prediction -->
+
+::: {.col-sm-6}
+::: {.well}
+### Will that Admitted Student Actually Enroll?
+
+🎫Python 🎫Machine Learning 🎫Data Analysis
+
+<a href="https://github.com/Curious-Joe/Enrollment_Prediction_Model/blob/master/Notebook/Enrollment%20Prediction%20Model.ipynb" class="button">Git Code</a>
+
+This project is about analyzing historic data about the admitted students, and building a predictive model to calculate probability of enrollment for the admitted students.
+:::
+:::
+
+<!--- end tableau: worried americans -->
 
 <!--- fastEda package -->
 
@@ -81,9 +94,9 @@ A Shiny app built as an R package using `golem` framework. The primary goal of t
 
 🎫R Package
 
-`fastEda` is an R package intended to make visual exploratory data analysis easier and faster. Using this package users will be able to quickly create plots to visualize uni-variate and bi-variate relations.
-
 <a href="https://github.com/Curious-Joe/fastEda" class="button">Git Code</a>
+
+`fastEda` is an R package intended to make visual exploratory data analysis easier and faster. Using this package users will be able to quickly create plots to visualize uni-variate and bi-variate relations.
 :::
 :::
 
@@ -97,10 +110,9 @@ A Shiny app built as an R package using `golem` framework. The primary goal of t
 
 🎫R 🎫NLP
 
-This analysis was part of an ongoing exploratory study about how Bangladesh was presented through contents shared on different internet platforms. In a previous [article](https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/) tweets that contained 'Bangladesh', a South Asian country, were analyzed to understand the most common areas that people tweeted about Bangladesh and what kind of sentiments were reflected. In this article, a similar analysis was conducted on the videos shared on Youtube that had Bangladesh in their titles.
-
 <a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">Git Code</a> <a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a>
 
+This analysis was part of an ongoing exploratory study about how Bangladesh, a south Asian country, was presented through contents shared on different internet platforms. In a previous [article](https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/) tweets that contained 'Bangladesh' were analyzed to understand the most common areas that people tweeted about Bangladesh and what kind of sentiments were reflected. In this article, a similar analysis was conducted on the videos shared on Youtube that had Bangladesh in their titles.
 :::
 :::
 
@@ -114,32 +126,28 @@ This analysis was part of an ongoing exploratory study about how Bangladesh was 
 
 🎫Tableau 🎫Data Viz
 
+<a href="https://public.tableau.com/profile/curious.joe#!/vizhome/HowworriedareAmericans/ComparisonwithSelectedState" class="button">Live Dashboard</a>
+
 This `Tableau` dashboard visualizes a [Gallup](https://www.gallup.com/home.aspx) survey measuring anxiety levels of Americans across all the continental states. This interactive dashboard allows users to have a quick comparative overview of different states in terms of the residents' anxiety level.
 
-<a href="https://public.tableau.com/profile/curious.joe#!/vizhome/HowworriedareAmericans/ComparisonwithSelectedState" class="button">Live Dashboard</a> 
-
-![](/img/worried_americans.png "Shiny App: Hollywood Movies"){width="492"}
 :::
 :::
 
 <!--- end tableau: worried americans -->
 
-<!-- Python: enrollment prediction -->
+<!-- tableau: pell students-->
 
 ::: {.col-sm-6}
 ::: {.well}
-### Will that Admitted Student Actually Enroll?
+### Where are the Low Income Students?
 
-🎫Python 🎫Machine Learning 🎫Data Analysis
+🎫Tableau 🎫Data Viz
 
-This project is about analyzing historic data about the admitted students, and building a predictive model to calculate probability of enrollment for the admitted students.
+<a href="https://public.tableau.com/profile/curious.joe#!/vizhome/PellGrant/Dashboard1" class="button">Live Dashboard</a>
 
-<a href="https://github.com/Curious-Joe/Enrollment_Prediction_Model/blob/master/Notebook/Enrollment%20Prediction%20Model.ipynb" class="button">Git Code</a> 
+This `Tableau` dashboard visualizes data on [Pell Grant](https://studentaid.gov/understand-aid/types/grants/pell) recipients as shared by the U.S. Department of Education. It shows a comparison among the states in terms of the total number of Pell Grant recipients. It also allows users to see highest Pell recipient receiving institutions, and how their positions change over the years. 
 
 :::
 :::
 
-<!--- end tableau: worried americans -->
-:::
-
-<!--- First row ends -->
+<!-- end tableau: pell students-->
