--- a/content/top/portfolio.Rmd
+++ b/content/top/portfolio.Rmd
@@ -57,7 +57,7 @@ h1, h2, h3, p {
 
 🎫R Package
 
-<a href="https://github.com/Curious-Joe/fastEda" class="button">Git Code</a>
+<a href="https://github.com/Curious-Joe/fastEda" class="button">GitHub Repo</a>
 
 `fastEda` is an R package intended to make visual exploratory data analysis easier and faster. Using this package users will be able to quickly create plots to visualize uni-variate and bi-variate relations.
 :::
@@ -74,7 +74,7 @@ h1, h2, h3, p {
 
 🎫R 🎫Web App 🎫ML 🎫Data Viz
 
-<a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a> <a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">Git Code</a>
+<a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a> <a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">GitHub Repo</a>
 
 A Shiny app built as an R package using `golem` framework. The primary goal of this application is to help users:
 
@@ -95,7 +95,7 @@ A Shiny app built as an R package using `golem` framework. The primary goal of t
 
 🎫Python 🎫Machine Learning 🎫Data Analysis
 
-<a href="https://github.com/Curious-Joe/Enrollment_Prediction_Model/blob/master/Notebook/Enrollment%20Prediction%20Model.ipynb" class="button">Git Code</a>
+<a href="https://github.com/Curious-Joe/Enrollment_Prediction_Model/blob/master/Notebook/Enrollment%20Prediction%20Model.ipynb" class="button">GitHub Repo</a>
 
 This project is about analyzing historic data about the admitted students, and building a predictive model to calculate probability of enrollment for the admitted students.
 :::
@@ -111,7 +111,7 @@ This project is about analyzing historic data about the admitted students, and b
 
 🎫R 🎫NLP
 
-<a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">Git Code</a> <a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a>
+<a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">GitHub Repo</a> <a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a>
 
 This analysis was part of an ongoing exploratory study about how Bangladesh, a south Asian country, was presented through contents shared on different internet platforms. In a previous [article](https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/) tweets that contained 'Bangladesh' were analyzed to understand the most common areas that people tweeted about Bangladesh and what kind of sentiments were reflected. In this article, a similar analysis was conducted on the videos shared on Youtube that had Bangladesh in their titles.
 :::
